improve sensor_record and correct some files
